implemented assets and liabilities logic
